--- a/Mechanical-Turk-HITs/hit.html
+++ b/Mechanical-Turk-HITs/hit.html
@@ -1,6 +1,9 @@
 <!-- Bootstrap v3.0.3 -->
 <link href="https://s3.amazonaws.com/mturk-public/bs30/css/bootstrap.min.css" rel="stylesheet" />
-<p><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script><!-- Setup --><script>
+<p><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+
+<!-- Setup -->
+<script>
 $(document).ready(function(){
     
   // Create IE + others compatible event handler
